--- a/README.rdoc
+++ b/README.rdoc
@@ -18,7 +18,7 @@ To use it in Rails, add this line to your Gemfile:
 RubyPowerpoint can simply parse a PowerPoint file(pptx) by extractng text from each slide:
 
     require 'ruby_powerpoint'
-    deck = RubyPowerpoint::Presentation.new "specs/fixtures/sample.ppts"
+    deck = RubyPowerpoint::Presentation.new "specs/fixtures/sample.pptx"
     deck.slides.each do |slide|
         puts slide.content # => ["Prsentation Header", "Presentation Notes...", "12"]
     end
